# sglib

./: .gitignore  .gitmodules  .header  Doxyfile  HACKING.txt  LICENSE.txt  Makefile  Makefile.am  README-LudumDare.txt  README.md  README.txt  TODO.txt  acinclude.m4  config.mak.in  config.sh  configure.ac  game.sln  game.vcxproj  game.vcxproj.filters  init.py  project.xml  srclist-sg.txt  srclist-sgpp.txt
3-objects/unix/: Makefile.am  configure.ac
libpce/: Doxyfile  configure.ac
libpce/include/libpce/: binary.h  cpu.h  hashtable.h  (+2 more)
libpce/lib/: hash.c  thread_pthread.c  thread_windows.c
libpce/tests/: .gitignore  Makefile.am  test_defs.c
scripts/: buildgen.py  config.sh  configure.ac  env.txt  init.py  run.sh.in  srclist-sgpp.txt  version.sh
scripts/buildtool/: cmake.py  env.py  git.py  gmake.py  gmake.txt  path.py  plist.py  remote.py  shell.py  tool.py  xcode.py
src/: .gitignore  Makefile  Makefile.am  SConstruct  audio.c  audio2.c  color.cpp  color.hpp  config.cpp  config.hpp  config.ini  config.ini.in  cube.cpp  cube.hpp  defs.h  image.c  load_audio.c  load_program.c  load_shader.c  load_texture.c  main.c  main.cpp  menu.c  model.cpp  object.cpp  object.hpp  opengl.hpp  player.cpp  pyramid.cpp  pyramid.hpp  run.sh.in  shot.cpp  srclist-base.txt  srclist-client.txt  test_audio.c  test_audio2.c  test_image.c  test_type.c  testconfig.cpp  text_layout.c  (+6 more)
src/audio/: alsa.c  buffer.c  convert.c  coreaudio.c  file.c  load.c  ogg.c  ogg.h  opus.c  resample.c  system.c  vorbis.c  wav.c  writer.c
src/base/: .gitignore  audio.h  audio_alsa.c  audio_copy.c  audio_coreaudio.c  audio_directsound8.c  audio_file.c  audio_file.h  audio_fileprivate.h  audio_mixdown.c  audio_mixdown.h  audio_ofile.c  audio_ofile.h  audio_pcm.c  audio_pcm.h  audio_raw.c  audio_resample.c  audio_source.c  audio_sysprivate.h  audio_system.c  audio_util.h  audio_wav.c  audio_wav.h  binary.h  clock.c  clock.h  clock_impl.h  configfile.h  configfile_read.c  cvar.c  defs.h  dispatch.h  dispatch_common.c  dispatch_impl.h  dispatch_pthread.c  dispatch_sync.c  entry.h  error.c  error.h  event.h  (+56 more)
src/client/: .header  bitmapfont.cpp  bitmapfont.hpp  color.hpp  dummytexture.cpp  dummytexture.hpp  keycode.hpp  letterbox.cpp  letterbox.hpp  model.cpp  model.hpp  opengl.hpp  rand.hpp  texture.cpp  texture.hpp  texturefile.cpp  texturefile.hpp  type.hpp  viewport.cpp  viewport.hpp
src/config/: config.hpp  configfile.cpp  configfile.hpp  configfileread.rl  path.cpp  path.hpp  stringarray.cpp  stringarray.hpp
src/core/: .header  audio_alsa.c  clock.c  clock_impl.h  configfile.c  cvar.c  cvar_load.c  cvar_private.h  cvar_save.c  cvar_table.c  cvartable.c  cvartable.h  error.c  file.c  file_impl.h  file_load.c  file_posix.c  file_read.c  file_textwriter.c  file_win.c  keyid.c  keytable_evdev.c  keytable_mac.c  keytable_win.c  log.c  log_console.c  log_impl.h  log_network.c  logtest.c  net.c  opengl.c  pack.c  path.c  path_norm.c  path_posix.c  path_win.c  private.h  rand.c  shader.c  sprite_write.c  (+5 more)
src/file/: path.c
src/game/: explosion.cpp  object.cpp  object.hpp  obstacle.cpp  obstacle.hpp  player.hpp  shot.cpp  shot.hpp  world.cpp  world.hpp
src/graphics/: color.hpp  dummytexture.cpp  dummytexture.hpp  model.cpp  model.hpp  texture.cpp  texture.hpp  texturefile.cpp  texturefile.hpp  video.cpp  video.hpp
src/gtk/: main.c  main.cpp
src/impl/: .header  clock.h  configfile.c  configfile.h  configfileread.c  cvar.c  cvar.h  dict.c  dict.h  entry.h  error.c  error.h  hash.h  lfile.c  lfile.h  lpath.c  model.c  model.h  opengl.h  pixbuf.c  pixbuf.h  pixbuf_loadimage.c  rand.c  resource.c  resource.h  strbuf.c  strbuf.h  sys.c  texture.c  texture.h  type.c
src/log/: network.c
src/mac/: .header  GApplication.h  GController.h  GController.m  GController.mm  GDisplay.h  GDisplay.m  GDisplay.mm  GMain.m  GMain.mm  GPrefix.h  GView.h  GView.mm  GWindow.h  GWindow.mm  main.c
src/mixer/: channel.c  channel.h  exacttime.c  mixdown.c  mixer.c  mixer.h  queue.c  sound.c  sound.h  system_alsa.c  system_coreaudio.c  system_directsound8.c  system_sdl.c  time.c  time.h  timeexact.c
src/osx/: .header  GApplication.m  GController.h  GDisplay.h  GPrefix.h  GWindow.h
src/pixbuf/: coregraphics.c  image.c  libjpeg.c  libpng.c  loadimage.c  pixbuf.c  premultiply_alpha.c  private.h  texture.c  wincodec.c  wincodec.cpp
src/platform/: gtk.c  sdl.c  windows.c
src/record/: cmdargs.c  cmdargs.h  record.c  record.h  screenshot.c  screenshot.h  video.c  video.h  videoio.c  videoio.h  videoparam.c  videoparam.h  videoproc.c  videoproc.h  videotime.c  videotime.h
src/scene/: group.cpp  group.hpp  leafobject.hpp  object.cpp  object.hpp
src/sdl/: main.cpp
src/sys/: .gitignore  autocf_osx.hpp  buffer.hpp  clock.cpp  clock.hpp  clock_osx.cpp  clock_posix.cpp  config.cpp  config.hpp  configfile.cpp  configfile.hpp  configfileread.rl  error.cpp  error.hpp  error_win.cpp  error_win.hpp  file.cpp  file.hpp  ifile.cpp  ifile.hpp  ifilereg.cpp  ifilereg.hpp  parseconfig.cpp  path.cpp  path.hpp  path_linux.cpp  path_osx.cpp  path_posix.cpp  path_posix.hpp  path_win.cpp  path_xdg.cpp  rand.cpp  rand.hpp  resource.cpp  resource.hpp  sharedref.hpp  stringarray.cpp  stringarray.hpp  system_error.cpp  system_error.hpp  (+1 more)
src/type/: coretext.c  font.c  font.cpp  font.hpp  font_osx.cpp  font_osx.hpp  font_pango.cpp  font_pango.hpp  freetype_error.c  pango.c  private.h  rastertext.cpp  rastertext.hpp  rastertext_cairo.cpp  rastertext_osx.cpp  textflow.c  textlayout.c  type.cpp  type.h  type.hpp  type_cairo.cpp  typeface.c  uniscribe.c
src/ui/: action.hpp  button.cpp  button.hpp  container.cpp  container.hpp  event.hpp  game.cpp  game.hpp  layer.cpp  layer.hpp  mainmenu.cpp  mainmenu.hpp  menu.cpp  menu.hpp  object.cpp  object.hpp  rect.hpp  screen.cpp  screen.hpp  uilayer.cpp  uilayer.hpp  widget.cpp  widget.hpp  window.cpp  window.hpp
src/util/: cpu.c  hash.c  hashtable.c  strbuf.c  thread_pthread.c  thread_windows.c
src/win/: defs.h  main.cpp
unix/: .gitignore  Makefile.am  acinclude.m4  config.ini.in  configure.ac  test.ini
(+569 files in other folders)
